<resources>
    <string name="app_name">EzManager</string>
    <string name="mayureshwar_construction">Mayureshwar Construction</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1000">₹1000</string>
    <string name="title">Title</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="no_date_selected">No Date Selected</string>
    <string name="select_date">Select Date</string>
    <string name="transaction_title">Transaction Title</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="add">ADD</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="export_to_pdf">Export to pdf</string>
    <string name="today_s_transaction_total_1000">Today\'s Transaction Total</string>
    <string name="debited">debited</string>
    <string name="credited">credited</string>
    <string name="add_your_transaction_here">Add your Transaction here:</string>
    <string name="sr_no">Sr.no</string>
    <string name="total_amount">Total Amount</string>
    <string name="stats">Stats</string>
    <string name="select_option">Select Option:</string>
    <string name="go">GO</string>
    <string name="show_stats">Show Stats</string>
    <string name="no_item_selected">NO item selected</string>
    <string name="thurday">Thurday</string>
    <string name="_20_09_21_monday">20-09-21 , Monday</string>
    <string name="customer_name">Customer Name</string>
    <string name="add_user">Add User</string>
    <string name="worker_name">Worker Name</string>
    <string name="add_worker">Add Worker</string>

    <string-array name="stats_menu">
        <item>Choose Option:</item>
        <item>last week</item>
        <item>Current month</item>
    </string-array>
</resources>