<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/standard_bottom_sheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AddNewTransactionFragment"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:textAlignment="center"
        android:text="Add your Transaction here:"
        android:id="@+id/txtMssg"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textNewTransactionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMssg"
        android:layout_margin="10dp"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textShortMessage"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textNewTransactionAmount"
        android:layout_width="match_parent"
        android:layout_below="@id/textNewTransactionTitle"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/amount">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textNewTransactionDate"
        android:text="@string/no_date_selected"
        android:layout_below="@id/textNewTransactionAmount"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"/>

    <Button
        android:id="@+id/btnOpenDatePicker"
        android:layout_below="@+id/textNewTransactionAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="25dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />
    <Button
        android:id="@+id/btnAddNewTransaction"
        android:layout_below="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="#00ff00"
        android:textColor="@color/black"
        />
    <RadioGroup
    android:id="@+id/radioGroup"
    android:checkedButton="@+id/radio_button_1"
        android:layout_below="@id/textNewTransactionDate"
    android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
    android:layout_height="wrap_content">

        <RadioButton
                android:id="@+id/radio_debit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/debited"
                />
            <RadioButton
                android:id="@+id/radio_credit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/credited"/>

</RadioGroup>


</RelativeLayout>
