<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/standard_bottom_sheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textNewTransactionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textShortMessage"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textNewTransactionAmount"
            android:layout_width="match_parent"
            android:layout_below="@id/textNewTransactionTitle"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/amount">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="numberDecimal"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textNewTransactionDate"
            android:text="@string/no_date_selected"
            android:layout_below="@id/textNewTransactionAmount"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"/>

        <Button
            android:id="@+id/btnOpenDatePicker"
            android:layout_below="@+id/textNewTransactionAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="25dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    <Button
        android:id="@+id/btnAddNewTransaction"
        android:layout_below="@+id/btnOpenDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="#00ff00"
        android:textColor="@color/black"
        />


    </RelativeLayout>
