<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="10dp"
    android:backgroundTint="#252324"
    app:cardCornerRadius="25dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:text="@string/transaction_title"
        android:id="@+id/transactionTitle"
        android:textColor="#FDD2BF"
        android:textSize="28sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="start"
        android:fontFamily="@font/optimus_princeps_semi_bold"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:layout_marginTop="15dp"
            android:id="@+id/transactionAmt"
            android:text="@string/_1000"
            android:layout_marginStart="20dp"
            android:textColor="@color/teal_700"
            android:fontFamily="@font/optimus_princeps_semi_bold"
            />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/transactionDate"
        android:text="@string/date"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textStyle="italic"
        android:fontFamily="@font/optimus_princeps"/>


    </LinearLayout>
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/delete"
        android:layout_gravity="center_vertical|end"
        android:id="@+id/btnDeleteTransaction"
        android:layout_marginRight="10dp"
        android:clickable="true"
        />


</androidx.cardview.widget.CardView>