<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.customer.AddCustomerFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/CustomerCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/CustomerAddUserToolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_200"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />
        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/CustomerCoordinatorLayout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CustomerAddUserName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="10dp"
            android:hint="@string/customer_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_customer"
                android:drawablePadding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CustomerAddUserPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CustomerAddUserName"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="Phone Number">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_user_phone"
                android:drawablePadding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CustomerAddUserAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CustomerAddUserPhone"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="Address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_user_address"
                android:drawablePadding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CustomerAddUserArea"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CustomerAddUserAddress"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="Area">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_area"
                android:drawablePadding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/WorkerJoinDateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CustomerAddUserArea"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:drawablePadding="10dp"
            android:text="Date"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_calendar" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/CustomerAddUserArea"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/WorkerJoinDateView"
            android:fontFamily="@font/sfpro"
            android:text="@string/no_date_selected"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnCustomerOpenDatePicker"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDate"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="25dp"
            android:fontFamily="@font/sfpro"
            android:text="@string/select_date"
            android:textColor="#28ffbf" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleGroupCustomer"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/btnCustomerOpenDatePicker"
            app:selectionRequired="true"
            android:orientation="horizontal"
            android:weightSum="3">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="None"
                android:textSize="11sp"

                android:layout_weight="1"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Labour Basis"
                android:textSize="11sp"
                android:layout_weight="1"
                android:textAllCaps="false"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:textSize="11sp"
                android:text="Material Basis"
                android:textAllCaps="false"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </com.google.android.material.button.MaterialButtonToggleGroup>


        <Button
            android:id="@+id/BtnCustomerAddCustomer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/toggleGroupCustomer"
            android:text="@string/add_new_customer" />


    </RelativeLayout>


</RelativeLayout>