<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.worker.AddWorker">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/CustomerCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/WorkerAddUserToolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_200"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />
        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/CustomerCoordinatorLayout">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/WorkerAddName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="10dp"
                android:hint="@string/worker_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_customer"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/WorkerAddPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/WorkerAddName"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="Phone Number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user_phone"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/WorkerAddAddress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/WorkerAddPhone"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="Address">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user_address"
                    android:drawablePadding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/WorkerJoinDateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/WorkerAddAddress"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:drawablePadding="10dp"
                android:text="Joining Date"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/WorkerJoinDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/WorkerAddAddress"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/WorkerJoinDateView"
                android:text="DD-MM-YYYY" />

            <Button
                android:id="@+id/btnOpenDatePicker"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/WorkerJoinDate"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="25dp"
                android:fontFamily="@font/sfpro"
                android:text="@string/select_date"
                android:textColor="#28ffbf" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/btnOpenDatePicker"
                android:id="@+id/btnAddWorker"
                android:text="@string/add_user" />


        </RelativeLayout>


    </ScrollView>


</RelativeLayout>